# BudgetMaster

./: .gitignore  001  README.md  find_log_tags.ps1  find_tags_simple.ps1  pyproject.toml  pytest.ini  requirements.txt  run_tests_env.py  run_tests_silent.py
BudgetMasterBackend/: Main.java  budget_master.db  compiler.py  create_database.py
BudgetMasterBackend/examples/: common.py
BudgetMasterBackend/model/: Budget.java  Operation.java
BudgetMasterBackend/repository/: AccountRepository.java  BaseRepository.java  BudgetRepository.java  CategoryRepository.java  CurrencyRepository.java  OperationRepository.java  Repository.java
BudgetMasterBackend/service/: AccountService.java  BudgetService.java  CategoryService.java  CurrencyService.java  OperationService.java
BudgetMasterBackend/test/: Utf8Test.java  run_utf8_test.py
BudgetMasterBackend/util/: DatabaseUtil.java
BudgetMasterBackend/validator/: AccountValidator.java  BudgetValidator.java  CategoryValidator.java  CurrencyValidator.java  OperationValidator.java  Validator.java
android-app/: APP_VERSION  BACKEND_VERSION  VERSION  gradle.properties  settings.gradle.kts
android-app/app/: build.gradle.kts
android-app/gradle/: libs.versions.toml
backend/: BackendVersion.java  Main.java  build-jar.bat  build.gradle.kts  compiler.py  create_database.py  delete_database.py  run_main.bat  struct  teh_stec
budget_master/: budget_master.db  main.py
doc/: teh_stec
resorses/: accounts.csv  categories.csv  currencies.csv
utils/: build_backend_jar.bat  compile_backend.py  create_database.py  delete_database.py
(+500 files in other folders)
